add aria labels to footer

--- a/contact.html
+++ b/contact.html
@@ -84,9 +84,9 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2376.682990321252!2d-2.752369303510669!3d52.69200191028757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a9e3861c30e53%3A0xe29d052caf8bac1!2sBannatyne%20Health%20Club!5e0!3m2!1sen!2suk!4v1698675839219!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
     <footer>
-      <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
-      <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
-      <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
+      <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
+      <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
+      <a href="https://www.twitter.com" aria-label="link to twitter" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
   </footer>
 </body>
 </html>
