--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
   </main>
 
   <footer>
-      <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
-      <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
-      <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
+    <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
+    <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
+    <a href="https://www.twitter.com" aria-label="link to twitter" target="_blank"><i class="fa-brands fa-x-twitter trans"></i></a>
   </footer>
 </body>
 </html>
