revise image sizes and formats for performance gain

--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,12 @@
   
   <main id="main-contact">
     <div class="hidden">
-      <img src="assets/images/background.jpg" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background.webp" alt="a picture of a phone" class="sidebar">
     </div>
         
       <div>
         <h2 class="heading-sm">Contact Me</h2>  
-        <img src="assets/images/phone.jpg" alt="a picture of a phone" class="contact-pic">
+        <img src="assets/images/phone.webp" alt="a picture of a phone" class="contact-pic">
         <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
         <label for="first-name">First Name:</label>
         <input type="text" id="first-name" name="first-name" required>
@@ -70,7 +70,7 @@
       </div>
 
     <div class="hidden">
-      <img src="assets/images/background1.jpg" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background1.webp" alt="a picture of a phone" class="sidebar">
     </div>
   </main>
 
