reposition contact page to take advantage of webp

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
       <img src="assets/images/background.webp" alt="a picture of a phone" class="sidebar">
     </div>
         
-      <div>
+      <div id="contact-mid">
         <h2 class="heading-sm">Contact Me</h2>  
         <img src="assets/images/phone.webp" alt="a picture of a phone" class="contact-pic">
         <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
