--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <img id="logo" src="assets/images/website_logo_white.png" alt="Pure Drive Fitness logo">
+    <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
     <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
@@ -38,18 +38,18 @@
   <main id="main-about">
     <h2 class="heading-sm">About Me</h2>
     <div>
-      <img src="assets/images/laura.jpg" alt="a picture of laura smiling" class="profile-pic">
+      <img src="assets/images/laura.webp" alt="a picture of laura smiling" class="profile-pic">
       <p class="testimonial">Allow me to introduce myself - I am Laura, a dedicated and passionate personal trainer here to help you embark on an incredible fitness journey.</p>
       <p>I understand that beginning a fitness regimen can be both exciting and overwhelming. That's where I come in! With my extensive knowledge in exercise science, nutrition, and personalised training techniques, I am committed to creating a tailored program that suits your unique needs and aspirations.</p>
       <br>
       <p>Whether you're looking to shed a few pounds, build lean muscle, improve your endurance, or simply enhance your overall well-being, together we can turn your aspirations into reality. I firmly believe that fitness should be a joyful and empowering experience, and I am here to provide the motivation, encouragement, and expertise needed to make your journey enjoyable and successful.</p>
-      <img src="assets/images/laura-board.jpg" alt="a picture of laura smiling" class="profile-pic-active">
+      <img src="assets/images/laura-board.webp" alt="a picture of laura smiling" class="profile-pic-active">
       <p class="testimonial">Not convinced?....You will be, read on....</p>
       <p>I strive to create a warm and supportive environment where you can feel comfortable and confident in your fitness pursuits. No matter your age, fitness level, or previous experience, I am here to meet you where you are and help you progress at a pace that suits you best. With my guidance and your determination, we can unlock your full potential and help you achieve the health and vitality you deserve.</p>
       <br>
       <p>So, if you're ready to embark on a transformative fitness journey filled with positive energy, personal growth, and incredible results, I invite you to take the first step. Together, we will conquer challenges, celebrate victories, and create a sustainable lifestyle that will leave you feeling stronger, more confident, and truly alive.</p>
       <br>
-      <img src="assets/images/steps.jpg" alt="a picture of someone walking" class="profile-pic-steps">
+      <img src="assets/images/steps.webp" alt="a picture of someone walking" class="profile-pic-steps">
       <p>I look forward to meeting you and embarking on this incredible journey together. Let's take the first step towards a healthier, happier you!</p>
       <p class="testimonial">Yours in health, Laura</p>
     </div>
