--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <header>
-    <img id="logo" src="assets/images/website_logo_white.png" alt="Pure Drive Fitness logo">
+    <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
     <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
