--- a/help.html
+++ b/help.html
@@ -40,19 +40,19 @@
     <div>
       <p class="testimonial">Whatever type of help you want, success rates are always better when it is targetted, so, what do you want to focus on?</p>
       <div class="help-block" id="tone">
-        <img src="assets/images/tone.jpg" alt="a person with no excess weight">
+        <img src="assets/images/tone.webp" alt="a person with no excess weight">
         <div class="overlay-text"><h3>Tone</h3>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</div>
       </div>
       <div class="help-block" id="nutrition">
-        <img src="assets/images/nutrition.jpg" alt="a picture of a healthy meal">
+        <img src="assets/images/nutrition.webp" alt="a picture of a healthy meal">
         <div class="overlay-text"><h3>Nutrition</h3>You cannot out-train a bad diet, but what is a good diet?</div>      
       </div>
       <div class="help-block" id="weight">
-        <img src="assets/images/weight.jpg" alt="a girl showing she has lost weight">
+        <img src="assets/images/weight.webp" alt="a girl showing she has lost weight">
         <div class="overlay-text"><h3>Weight loss</h3>Fad diets never produce long term results, a tailored plan to suit your lifestyle will</div>
       </div>
       <div class="help-block" id="training">
-        <img src="assets/images/train.jpg" alt="a man running">
+        <img src="assets/images/train.webp" alt="a man running">
         <div class="overlay-text"><h3>Train</h3>Want to beat your PB or train for an event?</div>       
       </div>
     </div>
