first changes to fix format issue on big media

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </header>
 
   <main>
-    <section id="hero-section">
+    <div id="hero-section">
       <p>Welcome to Pure Drive Fitness</p>
-    </section>
+    </div>
 
     <section id="index-body">
       <h3>What can I help with today?</h3>
