add hero image and resize for media

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <p>Welcome to Pure Drive Fitness</p>
     </div>
 
+    <img id="hero" src="assets/images/hero.webp" alt="two people exercising">  
+    
     <section id="index-body">
       <h3>What can I help with today?</h3>
         <div id="main-links">
