simplify booking page

--- a/book.html
+++ b/book.html
@@ -39,10 +39,6 @@
     <h2 class="heading-sm">Booking</h2>
     <div class="booking-info">
       <p class="testimonial">"Booking with Pure Drive Fitness is really easy" Sarah, Worcester</p>
-      <p>Simply contact me via my contact page or by using the methods below to check availability</p>
-      <br>
-      <p>Email: booking@pdrive-fitness.com</p>
-      <p>Telephone: 07913 555 5555</p>  
     </div>
     <div class="container">
       <div class="row">
@@ -62,7 +58,7 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Single Session</p>
           <p>£30</p>
-          <a href="/book-tone.html" class="button">Book Now</a>
+          <a href="/book-tone.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Loss Single Session</p>
