--- a/book.html
+++ b/book.html
@@ -48,6 +48,7 @@
             <i class="fa-solid fa-dumbbell rounded-logo"></i>
             <p>Tone Double Session</p>
             <p>£50</p>
+            <a href="/book-form.html" class="button">Book</a>
           </div>
         </div>
       </div>
@@ -58,15 +59,17 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Single Session</p>
           <p>£30</p>
-          <a href="/book-tone.html" class="button">Book</a>
+          <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Loss Single Session</p>
           <p>£30</p>
+          <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
           <p>Training Single Session</p>
           <p>£30</p>
+          <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
     </div>
@@ -75,10 +78,12 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Super Session</p>
           <p>£40</p>
+          <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Super Session</p>
           <p>£40</p>
+          <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
     </div> 
