added text and styling to the booking page

--- a/book.html
+++ b/book.html
@@ -48,6 +48,7 @@
             <i class="fa-solid fa-dumbbell rounded-logo"></i>
             <p>Tone Double Session</p>
             <p>£50</p>
+            <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
             <a href="/book-form.html" class="button">Book</a>
           </div>
         </div>
@@ -59,16 +60,19 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Single Session</p>
           <p>£30</p>
+          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Loss Single Session</p>
           <p>£30</p>
+          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
           <p>Training Single Session</p>
           <p>£30</p>
+          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
@@ -78,11 +82,13 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Super Session</p>
           <p>£40</p>
+          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Super Session</p>
           <p>£40</p>
+          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
