add images to booking page

--- a/book.html
+++ b/book.html
@@ -42,7 +42,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="block">
+        <div class="hidden book-img">
+          <img src="assets/images/running.webp" alt="a person running" class="sidebar">
+        </div>
+        <div class="block">  
           <div id="featured">
             <h2>Featured Session</h2>
             <i class="fa-solid fa-dumbbell rounded-logo"></i>
@@ -51,6 +54,9 @@
             <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
             <a href="/book-form.html" class="button">Book</a>
           </div>
+        </div>
+        <div class="hidden book-img flip-image">
+          <img src="assets/images/running.webp" alt="a person running" class="sidebar">
         </div>
       </div>
     </div>
