combine help page with index and remove help

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       <nav>
         <ul>
           <li class="trans-right"><a href="index.html" class="active">Home</a></li>
-          <li class="trans-right"><a href="help.html">Help</a></li>
           <li class="trans-right"><a href="book.html">Book</a></li>
           <li class="trans-right"><a href="about.html">About</a></li>
           <li class="trans-right"><a href="contact.html">Contact</a></li>
@@ -47,22 +46,22 @@
         <div id="main-links">
           <div>
             <a href="help.html#tone">
-              <p><i class="fa-solid fa-dumbbell rounded-logo"></i> Tone</p>                
+              <p><img src="assets/images/tone.webp" alt="a person with no excess weight"> Tone Repetitive, mid weight exercises help firm muscle and reduce fat deposits</p>                
             </a>
           </div>
           <div class="right">
             <a href="help.html#nutrition">
-              <p>Nutrition <i class="fa-solid fa-utensils rounded-logo"></i></p> 
+              <p>Nutrition You cannot out-train a bad diet, but what is a good diet?<img src="assets/images/nutrition.webp" alt="a picture of a healthy meal"></p> 
             </a>
           </div>
           <div>
             <a href="help.html#weight">
-              <p><i class="fa-solid fa-weight-scale rounded-logo"></i> Weight Loss</p>
+              <p><img src="assets/images/weight.webp" alt="a girl showing she has lost weight"> Weight Loss Fad diets never produce long term results, a tailored plan to suit your lifestyle will</p>
             </a>
           </div>
           <div class="right">
             <a href="help.html#training">
-              <p>Training <i class="fa-solid fa-stopwatch rounded-logo"></i></p>          
+              <p>Training Want to beat your PB or train for an event?<img src="assets/images/train.webp" alt="a man running"></p>          
             </a>
           </div>
         </div>
@@ -70,6 +69,20 @@
         <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
       </div>
     </section>
+    <div class="accreditation">
+      <p>Expertise and knowledge is provided by these accreditations</p>
+      <div class="accreditation-img">  
+        <img src="assets/images/accreditations/action.png" alt="the action logo">
+        <img src="assets/images/accreditations/issa.png" alt="the issa logo">
+        <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
+      </div>
+    </div>
+    <div id="bottom-tag"> 
+      <a href="about.html"><h4>Click here to find out about me <i class="fa-solid fa-computer-mouse"></i></h4></a>
+    </div>
+    <div class="testimonial">
+      <p>"The moment you commit to something is the moment you achieve it"</p>   
+    </div>
   </main>
 
   <footer>
