resize pages mobile

--- a/index.html
+++ b/index.html
@@ -44,31 +44,39 @@
     <section id="index-body">
       <h3>What can I help with today?</h3>
         <div id="main-links">
-          <div>
-            <a href="help.html#tone">
-              <p><img src="assets/images/tone.webp" alt="a person with no excess weight"> Tone Repetitive, mid weight exercises help firm muscle and reduce fat deposits</p>                
-            </a>
+          <div class="home-block">
+            <img src="assets/images/tone.webp" alt="a person with no excess weight">
+            <div class="home-block-text">
+              <h3>Tone</h3>
+              <p>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</p>                
+            </div>
           </div>
-          <div class="right">
-            <a href="help.html#nutrition">
-              <p>Nutrition You cannot out-train a bad diet, but what is a good diet?<img src="assets/images/nutrition.webp" alt="a picture of a healthy meal"></p> 
-            </a>
+          <div class="home-block">
+            <div class="home-block-text">
+              <h3>Nutrition</h3>
+              <p>You cannot out-train a bad diet, but what is a good diet?</p>
+            </div>
+            <img src="assets/images/nutrition.webp" alt="a picture of a healthy meal">
           </div>
-          <div>
-            <a href="help.html#weight">
-              <p><img src="assets/images/weight.webp" alt="a girl showing she has lost weight"> Weight Loss Fad diets never produce long term results, a tailored plan to suit your lifestyle will</p>
-            </a>
+          <div class="home-block">
+            <img src="assets/images/weight.webp" alt="a girl showing she has lost weight"> 
+            <div class="home-block-text">
+              <h3>Weight Loss</h3>
+              <p>Fad diets never produce long term results, a tailored plan to suit your lifestyle will</p>
+            </div>
           </div>
-          <div class="right">
-            <a href="help.html#training">
-              <p>Training Want to beat your PB or train for an event?<img src="assets/images/train.webp" alt="a man running"></p>          
-            </a>
+          <div class="right home-block">
+            <div class="home-block-text">
+              <h3>Training</h3>
+              <p>Want to beat your PB or train for an event?</p>
+            </div>
+            <img src="assets/images/train.webp" alt="a man running">
           </div>
         </div>
       <div class="testimonial">
         <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
       </div>
-    </section>
+    
     <div class="accreditation">
       <p>Expertise and knowledge is provided by these accreditations</p>
       <div class="accreditation-img">  
@@ -78,11 +86,12 @@
       </div>
     </div>
     <div id="bottom-tag"> 
-      <a href="about.html"><h4>Click here to find out about me <i class="fa-solid fa-computer-mouse"></i></h4></a>
+      <a href="book.html"><h4><i class="fa-solid fa-computer-mouse"></i> Click here to find out about booking sessions <i class="fa-solid fa-computer-mouse"></i></h4></a>
     </div>
     <div class="testimonial">
       <p>"The moment you commit to something is the moment you achieve it"</p>   
     </div>
+    </section>
   </main>
 
   <footer>
