multimedia styling of contact and booking

--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
       <div class="testimonial">
         <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
       </div>
-    
+    <div id="bottom-tag"> 
+      <a href="book.html"><h3>Click here to find out about booking sessions <i class="fa-solid fa-computer-mouse"></i></h3></a>
+    <br>
+    </div>    
     <div class="accreditation">
       <p>Expertise and knowledge is provided by these accreditations</p>
       <div class="accreditation-img">  
@@ -85,9 +88,7 @@
         <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
       </div>
     </div>
-    <div id="bottom-tag"> 
-      <a href="book.html"><h4><i class="fa-solid fa-computer-mouse"></i> Click here to find out about booking sessions <i class="fa-solid fa-computer-mouse"></i></h4></a>
-    </div>
+
     <div class="testimonial">
       <p>"The moment you commit to something is the moment you achieve it"</p>   
     </div>
