tweaks to styling to tidy layout

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="testimonial">
-      <p>"The moment you commit to something is the moment you achieve it"</p>   
+      <p>"The very moment you commit to something is the very moment you achieve it"</p>   
     </div>
     </section>
   </main>
