fix booking text spacing

--- a/book.html
+++ b/book.html
@@ -50,7 +50,7 @@
             <i class="fa-solid fa-dumbbell rounded-logo"></i>
             <p>Tone Double Session</p>
             <p>£50</p>
-            <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+            <p>The Tone double session features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute workout where mid weights are used to work focussed muscle groups to achieve the perfect toning workout.</p>
             <a href="/book-form.html" class="button">Book</a>
           </div>
         </div>
@@ -65,19 +65,19 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Single Session</p>
           <p>£30</p>
-          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+          <p class="session-text">The Nutrition single session features a 15 minute review to discuss your current situation and what your aims are.  We then move into a 15 minute explainer session to explain how we will monitor your nutrition.  Finally we spend 30 minutes describing some of the fantastic and healthy meals you can add to your plan.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
           <p>Weight Loss Single Session</p>
           <p>£30</p>
-          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+          <p class="session-text">The Weight Loss single session features a 15 minute review to discuss your current situation and what your aims are.  We then move into a 45 minutes of work focussing on  fat burning and tonight exercises.  The sessions are often low impact and low intensity to begin with before we step up the work levels as you progress.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-stopwatch rounded-logo"></i>
           <p>Training Single Session</p>
           <p>£30</p>
-          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+          <p class="session-text">The key to a sucessful targetted trainging session is to make sure we have an end point that we are working towards.  After a 15 minute discussion about what this end point is and how you training has progressed so far we move into 45 minutes of focussed training based on my recommendations to get you in perfect shape to achieve your goal.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
@@ -87,13 +87,13 @@
         <div class="block"><i class="fa-solid fa-utensils rounded-logo"></i>
           <p>Nutrition Super Session</p>
           <p>£40</p>
-          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+          <p class="session-text">The Nutrition super session features a 15 minute review to discuss your current situation and what your aims are.  We then move into a 15 minute explainer session to explain how we will monitor your nutrition.  Finally we spend 60 minutes describing some of the fantastic and healthy meals you can add to your plan and add the recipies to your folder.  After a week we then reconvene for a 30 minute review session to see how you are getting on and adjust your plan as required</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
         <div class="block"><i class="fa-solid fa-weight-scale rounded-logo"></i>
-          <p>Weight Super Session</p>
+          <p>Weight Loss Super Session</p>
           <p>£40</p>
-          <p>The Tone double sessions features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out.</p>
+          <p class="session-text">The Tone super session features a 30 minutes introduction where we discuss your current situation and what your aims are.  We then move into a 90 minute work out where mid weights are used to work focussed muscle groups to achieve the perfect toning work out. After a two days recovery time we then reconvene for a 30 high intensity session to really aid those big gains and improve your cardio fitness levels.</p>
           <a href="/book-form.html" class="button">Book</a>
         </div>
       </div>
