fix html issue on booking and add new images

--- a/book-form.html
+++ b/book-form.html
@@ -36,7 +36,7 @@
   
   <main id="main-booking">
     <div class="hidden">
-      <img src="assets/images/background.webp" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background2.webp" alt="a picture of a phone" class="sidebar">
     </div>
       
       <div id="booking-mid">
@@ -60,15 +60,15 @@
           <br>
           <h2>Other Sessions</h2>
           <input type="radio" id="nutrition-single" name="session" value="nutrition-single">
-          <label for="weight-loss">Nutrition Single Session</label><br>
+          <label for="nutrition-single">Nutrition Single Session</label><br>
           <input type="radio" id="weight-single" name="session" value="weight-single">
-          <label for="toning">Weight Single Session</label><br>
+          <label for="weight-single">Weight Single Session</label><br>
           <input type="radio" id="training-single" name="session" value="training-single">
-          <label for="muscle-gain">Trainign Single Session</label><br>
+          <label for="training-single">Trainign Single Session</label><br>
           <input type="radio" id="nutrition-super" name="session" value="nutrition-super">
-          <label for="weight-loss">Nutrition Super Session</label><br>
+          <label for="nutrition-super">Nutrition Super Session</label><br>
           <input type="radio" id="weight-super" name="session" value="weight-super">
-          <label for="toning">Weight Super Session</label><br>
+          <label for="weight-super">Weight Super Session</label><br>
           <label for="date">Please select a date that would suit you and I will be in touch shortly to confirm what times I have available:</label><br>
           <input type="date" id="date" name="date">        
         </div>
@@ -77,7 +77,7 @@
       </div>
 
       <div class="hidden">
-        <img src="assets/images/background1.webp" alt="a picture of a phone" class="sidebar">
+        <img src="assets/images/background3.webp" alt="a picture of a phone" class="sidebar">
       </div>
   </main>
 
