--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
   
   <main id="main-contact">
     <div class="hidden">
-      <img src="assets/images/background.webp" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background.webp" alt="a picture of a some gym equipment" class="sidebar">
     </div>
         
       <div id="contact-mid">
@@ -69,7 +69,7 @@
       </div>
 
     <div class="hidden">
-      <img src="assets/images/background1.webp" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background1.webp" alt="a picture of a some gym equipment" class="sidebar">
     </div>
   </main>
 
