--- a/book-form.html
+++ b/book-form.html
@@ -36,7 +36,7 @@
   
   <main id="main-booking">
     <div class="hidden">
-      <img src="assets/images/background2.webp" alt="a picture of a phone" class="sidebar">
+      <img src="assets/images/background2.webp" alt="a girl training" class="sidebar">
     </div>
       
       <div id="booking-mid">
@@ -77,7 +77,7 @@
       </div>
 
       <div class="hidden">
-        <img src="assets/images/background3.webp" alt="a picture of a phone" class="sidebar">
+        <img src="assets/images/background3.webp" alt="a man training" class="sidebar">
       </div>
   </main>
 
