bug fixes on index page layout

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <p>Repetitive, mid weight exercises help firm muscle and reduce fat deposits</p>                
             </div>
           </div>
-          <div class="home-block">
+          <div class="home-block right">
             <div class="home-block-text">
               <h3>Nutrition</h3>
               <p>You cannot out-train a bad diet, but what is a good diet?</p>
@@ -74,7 +74,7 @@
           </div>
         </div>
       <div class="testimonial">
-        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals - Andy, Shropshire"</p>   
+        <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals" Andy, Shropshire</p>   
       </div>
     <div id="bottom-tag"> 
       <a href="book.html"><h3>Click here to find out about booking sessions <i class="fa-solid fa-computer-mouse"></i></h3></a>
