--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <header>
     <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i><span class="visually-hidden">Menu</span></label>
       <nav>
         <ul>
           <li class="trans-right"><a href="index.html">Home</a></li>
