updated comments on code

--- a/book-form.html
+++ b/book-form.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- header and nav -->
   <header>
     <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
@@ -35,12 +36,14 @@
   </header>
   
   <main id="main-booking">
+    <!-- sidebar image - hidden on smaller media -->
     <div class="hidden">
       <img src="assets/images/background2.webp" alt="a girl training" class="sidebar">
     </div>
       
       <div id="booking-mid">
         <h2 class="heading-sm">Book A Session</h2>  
+        <!-- session bookinf form -->
         <form id="booking-form" method="POST" action="https://formdump.codeinstitute.net">
         <label for="first-name">First Name:</label>
         <input type="text" id="first-name" name="first-name" required>
@@ -75,12 +78,12 @@
         <input type="submit" value="Submit" id="submit">
         </form>
       </div>
-
+      <!-- sidebar image - hidden on smaller media -->
       <div class="hidden">
         <img src="assets/images/background3.webp" alt="a man training" class="sidebar">
       </div>
   </main>
-
+    <!-- footer -->
     <footer>
       <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
       <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
