--- a/book.html
+++ b/book.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- header and nav -->
   <header>
     <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
@@ -37,13 +38,16 @@
   <main id="main-book">
     <h2 class="heading-sm">Booking</h2>
     <div class="booking-info">
+      <!-- testimonial -->
       <p class="testimonial">"Booking with Pure Drive Fitness is really easy" Sarah, Worcester</p>
     </div>
+    <!-- sessions information -->
     <div class="container">
       <div class="row">
         <div class="hidden book-img">
           <img src="assets/images/running.webp" alt="a person running" class="sidebar">
         </div>
+        <!-- featured sessions -->
         <div class="block">  
           <div id="featured">
             <h2>Featured Session</h2>
@@ -59,6 +63,7 @@
         </div>
       </div>
     </div>
+    <!-- other available sessions -->
     <h2>Other Sessions</h2>
     <div class="container">
       <div class="row">
@@ -98,7 +103,7 @@
         </div>
       </div>
     </div> 
-
+    <!-- session info -->
     <div class="booking-info">
       <h3>Session Types</h3>
       <p>Single - 1 hour</p>
@@ -106,11 +111,12 @@
       <p>Super - 90 minutes with a 30 minute follow up session</p>  
     </div>
 
+    <!-- testimonial -->
     <div class="testimonial">
       <p>"Pure Drive Fitness sessions are great value for money and gave me just what i needed to get real results" Gil, Staffordshire</p>   
     </div>         
   </main>
-
+  <!-- footer -->
   <footer>
     <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
     <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
