--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- header and nav -->
   <header>
     <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
@@ -36,10 +37,11 @@
 
   
   <main id="main-contact">
+    <!-- sidebar image - hidden on smaller media -->
     <div class="hidden">
       <img src="assets/images/background.webp" alt="a picture of a some gym equipment" class="sidebar">
     </div>
-        
+      <!-- contact form -->
       <div id="contact-mid">
         <h2 class="heading-sm">Contact Me</h2>  
         <img src="assets/images/phone.webp" alt="a picture of a phone" class="contact-pic">
@@ -67,21 +69,23 @@
         <input type="submit" value="Submit" id="submit">
         </form>
       </div>
-
+    <!-- sidebar image - hidden on smaller media -->
     <div class="hidden">
       <img src="assets/images/background1.webp" alt="a picture of a some gym equipment" class="sidebar">
     </div>
   </main>
-
+  <!-- other contact methods -->
   <div id="contact-footer">
     <p>You can also contact me via the methods below to check availability</p>
     <br>
     <p>Email: booking@pdrive-fitness.com</p>
     <p>Telephone: 07913 555 5555</p>
     <br>
+    <!-- iframe wiuth google maps fragment -->
     <p>Sessions are held at Bannatyne Health Club, Shrewsbury</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2376.682990321252!2d-2.752369303510669!3d52.69200191028757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487a9e3861c30e53%3A0xe29d052caf8bac1!2sBannatyne%20Health%20Club!5e0!3m2!1sen!2suk!4v1698675839219!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
+    <!-- footer -->
     <footer>
       <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
       <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
