--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- header and nav -->
   <header>
     <img id="logo" src="assets/images/website_logo_white.webp" alt="Pure Drive Fitness logo">
     <input type="checkbox" id="nav-toggle">
@@ -35,12 +36,14 @@
   </header>
 
   <main>
+    <!-- hero header -->
     <div id="hero-section">
       <p>Welcome to Pure Drive Fitness</p>
     </div>
-
+    <!-- hero image -->
     <img id="hero" src="assets/images/hero.webp" alt="two people exercising">  
     
+    <!-- mid section giving headline info about specialist areas -->
     <section id="index-body">
       <h3>What can I help with today?</h3>
         <div id="main-links">
@@ -73,13 +76,16 @@
             <img src="assets/images/train.webp" alt="a man running">
           </div>
         </div>
+      <!-- testimonial text -->
       <div class="testimonial">
         <p>"Pure Drive Fitness gave me the confidence and knowledge I needed to achive my goals" Andy, Shropshire</p>   
       </div>
+      <!-- link to booking page -->
     <div id="bottom-tag"> 
       <a href="book.html"><h3>Click here to find out about booking sessions <i class="fa-solid fa-computer-mouse"></i></h3></a>
     <br>
     </div>    
+    <!-- section showing various client accreditations -->
     <div class="accreditation">
       <p>Expertise and knowledge is provided by these accreditations</p>
       <div class="accreditation-img">  
@@ -88,13 +94,13 @@
         <img src="assets/images/accreditations/nasm.png" alt="the nasm logo">
       </div>
     </div>
-
+    <!-- motivational quote -->
     <div class="testimonial">
       <p>"The very moment you commit to something is the very moment you achieve it"</p>   
     </div>
     </section>
   </main>
-
+  <!-- footer -->
   <footer>
     <a href="https://www.facebook.com" aria-label="link to facebook" target="_blank"><i class="fa-brands fa-facebook trans"></i></a>
     <a href="https://www.instagram.com" aria-label="link to instagram" target="_blank"><i class="fa-brands fa-square-instagram trans"></i></a>
